:fix: Set navbar width to 100% instead of 100vw to avoid overflow

--- a/css/navbar.style.css
+++ b/css/navbar.style.css
@@ -3,7 +3,7 @@ nav
     background-color: var(--bg-color);
     box-shadow: 0px 5px 5px var(--shadow-color);
 
-    width: 100vw;
+    width: 100%;
     height: 100px;
 
     position: sticky;
